Implement simple hide and show functionality; Remove layers.js; Remove hardcoded layer container code in html; Dynamically render the containers based on the layers content; Create a LayerHtmlElement fucntion that creates the layer html element and returns it to the caller

--- a/main.css
+++ b/main.css
@@ -200,4 +200,9 @@ canvas {
     height: 50px;
     border-bottom: 2px solid var(--color-surface-mixed-300);
     background: var(--color-surface-mixed-100);
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 1rem;
 }
