--- a/main.css
+++ b/main.css
@@ -194,6 +194,7 @@ canvas {
     height: 200px;
     margin-top: 0.5rem;
     overflow-y: scroll;
+    user-select: none;
 }
 
 .inspector__layers-layer {
@@ -205,4 +206,23 @@ canvas {
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem 1rem;
+}
+
+.inspector__layers-layer--selected {
+    border-left: 2px solid var(--color-primary-600);
+}
+
+.icon--white {
+    filter: contrast(1%);
+}
+
+.clickable {
+    width: 24px;
+    height: 24px;
+    overflow: hidden;
+}
+
+object {
+    width: 100%;
+    pointer-events: none;
 }
