--- a/main.css
+++ b/main.css
@@ -218,6 +218,7 @@ canvas {
 
 .clickable {
     width: 20px;
+    min-width: 20px;
     height: 20px;
     overflow: hidden;
 }
@@ -225,4 +226,9 @@ canvas {
 object {
     width: 100%;
     pointer-events: none;
+}
+
+.ellipsis {
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
